add: register swag
